      (glibc23-thread-debugging.dpatch).
    - Remove glibc23-thread-debugging.dpatch in response to upstream
      comments.  Don't strip libpthread symbols needed for thread debugging.
    - Add version sanity check for kernels whose extraversion starts with a
      dot (Closes: #218546).
    - Disable SSE for pre-2.4 kernels (Closes: #218524).

 -- GOTO Masanori <gotom@debian.or.jp>  Sat,  1 Nov 2003 01:47:23 +0900

glibc (2.3.2.ds1-8) unstable; urgency=low

  * Daniel Jacobowitz <dan@debian.org>

    - Don't use --enable-omitfp since we don't install libc_g.a.
    - Enable NPTL for S/390.
    - Fix the /lib/ld64.so.1 symlink for s390x.
    - Update maintainer scripts for fixes lost in the rewrite.
    - Enable NPTL for ia64.  Thanks to Ian Wienand for testing.
    - Automatically cross-compile if the kernel is too old to build
      an optimized library.
    - Do not run make check if cross compiling.
    - Fix msqid_ds on MIPS.  Dpatch from Guido Guenther, patch by
      Thiemo Seufer (Closes: #215273, #200215, #217593).
    - Check for old copies of glibc in a couple of places (Closes: #212224).
    - Fix a libio compatibility code bug which crashed the Citrix client
      (glibc23-libio-compat.dpatch).
    - Remove fuzzy markers from fr.po.  Patch from Denis Barbier
      <barbier@debian.org> (Closes: #217865).
    - Re-add debian/patches/80_glibc232-locales-nb_NO-fix.dpatch, which had
      gotten lost.
    - Re-add typo fixes to iconv.1 and rpcgen.1.
    - Merge iconv.1 fix to iconv.pod.
    - Re-add fix for locale-gen and POSIXLY_CORRECT.
    - Update ldso-disable-hwcap.dpatch and preinst/postinst scripts.
    - Update maintainer scripts not to use basename; dpkg invokes the
      scripts as tmp.ci/postinst, not libc6.postinst.
    - Add a patch for building shlib.lds which fixes a parse error when
      building without an existing -dev package installed.
      - debian/patches/11_shlib-lds.dpatch

  * Jeff Bailey <jbailey@nisa.net>
