@@ -17,6 +17,7 @@ glibc (2.3.2.ds1-9) unstable; urgency=low
     - Add version sanity check for kernels whose extraversion starts with a
       dot (Closes: #218546).
     - Disable SSE for pre-2.4 kernels (Closes: #218524).
+    - Symlink asm-sparc and asm-sparc64 into debian/include if necessary.
 
  -- GOTO Masanori <gotom@debian.or.jp>  Sat,  1 Nov 2003 01:47:23 +0900
 
